--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="container">
     <div class="wrapper index">
       <div class="btn-container stop">
-        <button class="btn-stop"> <img src="/img/icons/" alt=""></button>
+        <button class="btn-stop"> <img class="x-btn" src="/img/krest.png" alt=""></button>
       </div>
       <div class="wrapper-content-container">
         <div class="wrapper-content">
@@ -36,7 +36,7 @@
         </div>
       </div>
       <div class="video-container">
-        <video src="/video1_1.mp4" muted autoplay></video>
+        <video src="/video1_1.mp4"  ></video>
       </div>
     </div>
     <div class=" wrapper features">
@@ -47,7 +47,7 @@
    <div class="features-little-titles">
    <div class="little-title-1"></div>
    <div class="little-title-1"></div>
-   <div class="little-title-1"></div>
+   <div class="little-title-1"></div> 
    </div>
     </div>
     <div class="monitor">
