--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
               try now
             </button>
           </div>
+          <p>* No need to add cards details</p>
           
         </div>
       </div>
