--- a/index.html
+++ b/index.html
@@ -13,10 +13,20 @@
   <link rel="stylesheet" href="css/partners.css">
   <link rel="stylesheet" href="/css/monitor.css">
 <link rel="stylesheet" href="/css/index.css">
+<link rel="stylesheet" href="css/header.css">
   <title>Document</title>
 </head>
 <body>
   <div class="container">
+    <header class="header">
+      <div class="items"> <a class="link" href="#main" > Main</a> <button class="nav-link-btn nav-bnt-1"></button></div>
+      <div class="items"> <a class="link" href="#introduction" > Introduction</a> <button class="nav-link-btn"></button></div>
+      <div class="items">  <a class="link" href="#features" > Features</a> <button class="nav-link-btn"></button></div>
+      <div class="items"><a class="link" href="#client">Clients</a> <button class="nav-link-btn"></button></div>
+      <div class="items"><a class="link" href="#registration">Registration</a> <button class="nav-link-btn"></button></div>
+     
+
+    </header>
     <div class="wrapper index">
       <div class="btn-container stop">
         <button class="btn-stop"> <img class="x-btn" src="/img/krest.png" alt=""></button>
@@ -40,7 +50,7 @@
         <video src="/video1_1.mp4"  ></video>
       </div>
     </div>
-    <div class=" wrapper features">
+    <div class=" wrapper features" id="features">
    <div class="features-big-title">
     <h3>New features</h3>
     <h2>Some Awesome Features</h2>
@@ -93,7 +103,15 @@
               alias libero tempore. Praesentium saepe deleniti commodi labore?</p>
           </div>
         </div>
+        <div class="sponsors">
+          <div class="sponsor-1"> <a class="partenr-image" href=""> <img src="/img/partners/partner1.png" alt=""></a></div>
+          <div class="sponsor-1"> <a href=""> <img src="/img/partners/partner2.png" alt=""></a></div>
+          <div class="sponsor-1"> <a href=""> <img src="/img/partners/partner3.png" alt=""></a></div>
+          <div class="sponsor-1"> <a href=""> <img src="/img/partners/partner4.png" alt=""></a></div>
+          <div class="sponsor-1"> <a href=""> <img src="/img/partners/partner5.png" alt=""></a></div>
+        </div>
     </div>
+    <div class="clients"></div>
   </div>
   <script src="/js/script.js"></script>
 </body>
