--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="/css/monitor.css">
 <link rel="stylesheet" href="/css/index.css">
 <link rel="stylesheet" href="css/header.css">
+<link rel="stylesheet" href="css/try-form.css">
   <title>Document</title>
 </head>
 <body>
