--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
     </header>
     <div class="try-form">
       <form action="">
-        <input type="text">
-        <input type="text" name="" id="">
-        <input type="text" name="" id="">
+        <input type="text" placeholder="Full name">
+        <input type="email" name="" id="" placeholder="your email">
+        <input type="text" name="" id="" placeholder="message">
+        <input type="submit" value="send">
       </form>
+      <button class="try-close-btn">Close</button>
     </div>
     <div class="wrapper index" id="main">
       <div class="btn-container stop">
