fixed:video button js

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
       </div>
       <div class="video-container ">
-        <video src="/video1_1.mp4"  ></video>
+        <video src="/video1_1.mp4" class="video"></video>
       </div>
     </div>
     <div class=" wrapper features" id="features">
@@ -166,5 +166,6 @@
     </div>
   </div>
   <script src="/js/script.js"></script>
+  <script src="/js/video.js"></script>
 </body>
 </html>
