fixed:video_content width and height

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
   <link rel="stylesheet" href="css/registration.css">
   <link rel="stylesheet" href="css/partners.css">
   <link rel="stylesheet" href="/css/monitor.css">
-<link rel="stylesheet" href="/css/index.css">
+<link rel="stylesheet" href="/css/main.css">
 <link rel="stylesheet" href="css/header.css">
 <link rel="stylesheet" href="css/try-form.css">
+<link rel="stylesheet" href="css/introduction.css">
   <title>Document</title>
 </head>
 <body>
@@ -38,7 +39,7 @@
       </form>
       <button class="try-close-btn">Close</button>
     </div>
-    <div class="wrapper index" id="main">
+    <div class="wrapper main" id="main">
       <div class="btn-container stop">
         <button class="btn-stop"> <img class="x-btn" src="/img/krest.png" alt=""></button>
       </div>
@@ -60,6 +61,10 @@
       <div class="video-container ">
         <video src="/video1_1.mp4" class="video"></video>
       </div>
+    </div>
+    <div class="introduction">
+      <h3>New ideas</h3>
+      <h2>There is no other platforms for you as like ....</h2>
     </div>
     <div class=" wrapper features" id="features">
    <div class="features-big-title">
