--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 <link rel="stylesheet" href="css/header.css">
 <link rel="stylesheet" href="css/try-form.css">
 <link rel="stylesheet" href="css/introduction.css">
+<link rel="stylesheet" href="/css/footer.css">
+<link rel="stylesheet" href="/css/browser.css">
   <title>Document</title>
 </head>
 <body>
@@ -62,9 +64,19 @@
         <video src="/video1_1.mp4" class="video"></video>
       </div>
     </div>
-    <div class="introduction">
-      <h3>New ideas</h3>
-      <h2>There is no other platforms for you as like ....</h2>
+    <div class="introduction" id="introduction">
+      <div class="introduction-content">
+          <h3>New ideas</h3>
+        <h2>There is no other platforms for you as like <span class="dots">....</span> </h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+           Cum asperiores pariatur corporis quae minus quod omnis
+            error consequatur et architecto.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+               Asperiores, minus molestiae sapiente modi quia saepe! 
+               Soluta harum reiciendis placeat ratione ab velit 
+              perspiciatis hic aliquam quo aperiam. Ab, alias officiis!</p>
+      </div>
+    
     </div>
     <div class=" wrapper features" id="features">
    <div class="features-big-title">
@@ -142,6 +154,17 @@
           <div class="brands brand-5"> <a href=""> <img src="/img/partners/partner5.png" alt=""></a></div>
         </div>
     </div>
+    <div class="browser wrapper">
+      <div class="browser-content">
+        <h3>new design</h3>
+        <h2>There is no other platforms for you as like <span class="dots">...</span></h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus suscipit commodi architecto incidunt necessitatibus a quam perferendis at ut! Ab! Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+          Illum ipsa distinctio nisi iusto accusantium maiores!</p>
+ 
+      </div>
+      <div class="browser-image"> <img src="/img/browser.png" alt=""></div>
+     
+    </div>
     <div class="registration" id="registration">
       <h3>new design</h3>
       <h2>Over 1000 designers are using ...</h2>
@@ -158,16 +181,41 @@
    
     </div>
     <div class="footer ">
-      <div class="footer-inner_1">
-        <div class="inner-1">
-          <img src="/img/logo.png" alt="">
-        </div>
-        <div class="inner-1">
-          <h3>Support</h3>
-        </div>
-        <div class="inner-1">About Us</div>
-      </div>
-      <div class="footer-inner_2"></div>
+     <div class="footer-inner">
+      <img src="/img/logo.png" alt="">
+      Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam.
+USA & CAN: 1-888-123-4567
+Address: 34 Brokel Rd. NY
+     </div>
+     <div class="footer-inner"><h3>Support</h3>
+    <p>
+      <a href="">Help center</a>
+    </p>
+    <p>
+      <a href="">Get started</a>
+    </p>
+    <p>
+      <a href="">Contact US</a>
+    </p>
+  </div>
+  <div class="footer-inner"><h3>About Us</h3>
+    <p>
+      <a href="">About Us</a>
+    </p>
+    <p>
+      <a href="">Terms of Use</a>
+    </p>
+    <p>
+      <a href="">Privacy Police</a>
+    </p>
+  </div>
+     <div class="footer-inner"><h3>Get NewsLetter</h3>
+      <form action="">
+        <input type="email"> <input type="submit">
+      </form>
+
+    </div>
+   
     </div>
   </div>
   <script src="/js/script.js"></script>
