--- a/index.html
+++ b/index.html
@@ -183,9 +183,10 @@
     <div class="footer ">
      <div class="footer-inner">
       <img src="/img/logo.png" alt="">
-      Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam.
-USA & CAN: 1-888-123-4567
-Address: 34 Brokel Rd. NY
+      <p>     Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam.
+        USA & CAN: 1-888-123-4567
+        Address: 34 Brokel Rd. NY</p>
+ 
      </div>
      <div class="footer-inner"><h3>Support</h3>
     <p>
@@ -209,10 +210,13 @@ Address: 34 Brokel Rd. NY
       <a href="">Privacy Police</a>
     </p>
   </div>
-     <div class="footer-inner"><h3>Get NewsLetter</h3>
-      <form action="">
-        <input type="email"> <input type="submit">
-      </form>
+     <div class="footer-inner">
+      <h3>Get NewsLetter</h3>
+      <div class="input-container">
+        <input type="email" "> <input type="submit" class="btn-mail"value='' >
+      </div>
+       
+      
 
     </div>
    
