ispravil puti k faylam

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   <link rel="stylesheet" href="css/features.css">
   <link rel="stylesheet" href="css/registration.css">
   <link rel="stylesheet" href="css/partners.css">
-  <link rel="stylesheet" href="/css/monitor.css">
-<link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="css/monitor.css">
+<link rel="stylesheet" href="css/main.css">
 <link rel="stylesheet" href="css/header.css">
 <link rel="stylesheet" href="css/try-form.css">
 <link rel="stylesheet" href="css/introduction.css">
-<link rel="stylesheet" href="/css/footer.css">
-<link rel="stylesheet" href="/css/browser.css">
+<link rel="stylesheet" href="css/footer.css">
+<link rel="stylesheet" href="css/browser.css">
   <title>Document</title>
 </head>
 <body>
@@ -61,7 +61,7 @@
         </div>
       </div>
       <div class="video-container ">
-        <video src="/video1_1.mp4" class="video"></video>
+        <video src="video1_1.mp4" class="video"></video>
       </div>
     </div>
     <div class="introduction" id="introduction">
@@ -86,17 +86,17 @@
    </div>
    <div class="features-small-titles">
     <div class="small-title">
-      <img src="/img/icons/features-ico1.png" alt="">
+      <img src="img/icons/features-ico1.png" alt="">
       <h4><a href="">Some Awesome Features</a></h4>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates placeat numquam hic nihil ducimus vel.</p>
     </div>
     <div class="small-title">
-      <img src="/img/icons/features-ico2.png" alt="">
+      <img src="img/icons/features-ico2.png" alt="">
       <h4><a href="">Some Awesome Features</a></h4>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid repellat iste maiores ex amet ea?</p>
     </div>
     <div class="small-title">
-      <img src="/img/icons/features-ico3.png" alt="">
+      <img src="img/icons/features-ico3.png" alt="">
       <h4><a href="">Some Awesome Features</a></h4>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
         Tempora quae necessitatibus reiciendis omnis recusandae adipisci.</p>
@@ -107,7 +107,7 @@
     <div class="monitor wrapper">
       <div class="monitor-inner">
         <div class="image-section">
-          <img src="/img/macbook.png" alt="">
+          <img src="img/macbook.png" alt="">
         </div>
         <div class="title-section">
           <h3>new design</h3>
@@ -122,7 +122,7 @@
     <div class="partners wrapper" id="client">
         <div class="client-cards">
           <div class="card-1">
-            <img src="/img/team1.jpg" alt="">
+            <img src="img/team1.jpg" alt="">
             <h3> <a href="">John Doe</a> </h3>
             <h2>Co Founder</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
@@ -130,7 +130,7 @@
               alias libero tempore. Praesentium saepe deleniti commodi labore?</p>
           </div>
           <div class="card-1">
-            <img src="/img/team2.jpg" alt="">
+            <img src="img/team2.jpg" alt="a">
             <h3> <a href="">Megan Doe</a> </h3>
             <h2>Co Founder</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
@@ -138,7 +138,7 @@
               alias libero tempore. Praesentium saepe deleniti commodi labore?</p>
           </div>
           <div class="card-1">
-            <img src="/img/team3.jpg" alt="">
+            <img src="img/team3.jpg" alt="">
             <h3> <a href="">Brad Pitt</a> </h3>
             <h2>Co Founder</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
@@ -147,11 +147,11 @@
           </div>
         </div>
         <div class="sponsors">
-          <div class="brands brand-1"> <a class="partenr-image" href=""> <img src="/img/partners/partner1.png" alt=""></a></div>
-          <div class="brands brand-2"> <a href=""> <img src="/img/partners/partner2.png" alt=""></a></div>
-          <div class="brands brand-3"> <a href=""> <img src="/img/partners/partner3.png" alt=""></a></div>
-          <div class="brands brand-4"> <a href=""> <img src="/img/partners/partner4.png" alt=""></a></div>
-          <div class="brands brand-5"> <a href=""> <img src="/img/partners/partner5.png" alt=""></a></div>
+          <div class="brands brand-1"> <a class="partenr-image" href=""> <img src="img/partners/partner1.png" alt=""></a></div>
+          <div class="brands brand-2"> <a href=""> <img src="img/partners/partner2.png" alt=""></a></div>
+          <div class="brands brand-3"> <a href=""> <img src="img/partners/partner3.png" alt=""></a></div>
+          <div class="brands brand-4"> <a href=""> <img src="img/partners/partner4.png" alt=""></a></div>
+          <div class="brands brand-5"> <a href=""> <img src="img/partners/partner5.png" alt=""></a></div>
         </div>
     </div>
     <div class="browser wrapper">
@@ -162,7 +162,7 @@
           Illum ipsa distinctio nisi iusto accusantium maiores!</p>
  
       </div>
-      <div class="browser-image"> <img src="/img/browser.png" alt=""></div>
+      <div class="browser-image"> <img src="img/browser.png" alt=""></div>
      
     </div>
     <div class="registration" id="registration">
@@ -182,7 +182,7 @@
     </div>
     <div class="footer ">
      <div class="footer-inner">
-      <img src="/img/logo.png" alt="">
+      <img src="img/logo.png" alt="">
       <p>     Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam.
         USA & CAN: 1-888-123-4567
         Address: 34 Brokel Rd. NY</p>
@@ -213,13 +213,13 @@
      <div class="footer-inner">
       <h3>Get NewsLetter</h3>
       <div class="input-container">
-        <input type="email" "> <input type="submit" class="btn-mail"value='' >
+        <input type="email" > <input type="submit" class="btn-mail"value='' >
       </div>
     </div>
    
     </div>
   </div>
-  <script src="/js/script.js"></script>
-  <script src="/js/video.js"></script>
+  <script src="js/script.js"></script>
+  <script src="js/video.js"></script>
 </body>
 </html>
