--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/video_section.css">
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/features.css">
   <link rel="stylesheet" href="css/registration.css">
@@ -35,21 +34,21 @@
     <div class="try-form">
       <form action="">
         <input type="text" placeholder="Full name">
-        <input type="email" name="" id="" placeholder="your email">
-        <input type="text" name="" id="" placeholder="message">
+        <input type="email" name=""  placeholder="your email">
+        <input type="text" name=""  placeholder="message">
         <input type="submit" value="send">
       </form>
       <button class="try-close-btn">Close</button>
     </div>
     <div class="wrapper main" id="main">
       <div class="btn-container stop">
-        <button class="btn-stop"> <img class="x-btn" src="/img/krest.png" alt=""></button>
+        <button class="btn-stop"> <img class="x-btn" src="img/krest.png" alt=""></button>
       </div>
       <div class="wrapper-content-container">
         <div class="wrapper-content">
           <h1>There is no other platforms for you as like</h1>
           <div class="btn-container">
-            <button class="btn-video-play btn-video"><img src="/img/btn-play-ico.png" alt=""></button>
+            <button class="btn-video-play btn-video"><img src="img/btn-play-ico.png" alt=""></button>
           </div>
           <div class="btn-container">
             <button class="btn-try">
@@ -173,8 +172,7 @@
           <input type="text" class="reg-input">
           <input type="text" class="reg-input">
           <input type="email" class="reg-input">
-           <input type="submit"class="reg-submit" value="try now">
-        
+            <input type="submit" class="reg-submit" value="try now">
         </form>
         <p>By Signing up you agree to our <a href="">terms & Services</a></p>
       </div>
